--- a/index.css
+++ b/index.css
@@ -5,5 +5,67 @@
     --gold: #c2911d;
 }
 body {
+    /* font-family: 'Amita', cursive; */
+font-family: 'Josefin Sans', 'Montserrat', sans-serif;
     background-color: var(--pink);
+}
+/*|| button nav stuff*/
+.menuBtn {
+    font-size: 30px;
+    cursor: pointer;
+}
+.overlay /*background*/{
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    background-color: rgb(0,0,0); /*fallback*/
+    background-color: rgba(0,0,0,.5);
+    overflow-x: hidden; /*disable hidden scroll*/
+    transition: 0.5s; /*.5 second transition effect to slide in the overlay (h or w depending on reveal)*/
+}
+.overlay--content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: left;
+    margin-top: 30px; /* for small screens*/
+}
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: .3s;
+}
+.overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+}
+
+.overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+}
+
+@media screen and (max-height: 450px) {
+    .overlay a {
+        font-size: 20px;
+    }
+    .overlay .closebtn {
+        font-size: 40px;
+        top: 15px;
+        right: 35px;
+    }
+}
+
+/* || main page */
+.homebody {
+    display: grid;
+    grid-template-columns: 30%;
+    grid-template-columns: 30%;
 }
