--- a/index.css
+++ b/index.css
@@ -8,11 +8,18 @@ body {
     /* font-family: 'Amita', cursive; */
 font-family: 'Josefin Sans', 'Montserrat', sans-serif;
     background-color: var(--pink);
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    height: 100vh;
+    border: dotted 1rem red;
 }
 /*|| button nav stuff*/
 .menuBtn {
     font-size: 30px;
     cursor: pointer;
+    /* position: fixed; */
+    border: solid .5rem white;
 }
 .overlay /*background*/{
     height: 100%;
@@ -64,8 +71,47 @@ font-family: 'Josefin Sans', 'Montserrat', sans-serif;
 }
 
 /* || main page */
-.homebody {
+.homeBody {
     display: grid;
-    grid-template-columns: 30%;
-    grid-template-columns: 30%;
+    width: 100%;
+    height: 90%;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-gap: 1rem;
+    border: solid 1rem red;
+    box-sizing: border-box;
+}
+
+.homeBody > * {
+    border: solid .5rem white;
+}
+
+.homeLogo {
+    grid-row: 1 / 4;
+    grid-column: 1 / 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#firstNav {
+    grid-row: 1 / 2;
+    grid-column: 2 / 4; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#secondNav {
+    grid-row: 2 / 3;
+    grid-column: 2 / 4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#thirdNav {
+    grid-row: 3 / 4;
+    grid-column: 2 / 4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
