--- a/index.css
+++ b/index.css
@@ -12,14 +12,16 @@ font-family: 'Josefin Sans', 'Montserrat', sans-serif;
     flex-direction: column;
     align-content: flex-start;
     height: 100vh;
-    border: dotted 1rem red;
 }
 /*|| button nav stuff*/
 .menuBtn {
     font-size: 30px;
+    color: white;
+    border: none;
     cursor: pointer;
-    /* position: fixed; */
-    border: solid .5rem white;
+    padding: 2rem 2rem 1rem 1rem;
+    border: solid .1em white;
+    background-color: rgba(0,0,0,0);
 }
 .overlay /*background*/{
     height: 100%;
@@ -29,7 +31,7 @@ font-family: 'Josefin Sans', 'Montserrat', sans-serif;
     left: 0;
     top: 0;
     background-color: rgb(0,0,0); /*fallback*/
-    background-color: rgba(0,0,0,.5);
+    background-color: rgba(0,0,0,.9);
     overflow-x: hidden; /*disable hidden scroll*/
     transition: 0.5s; /*.5 second transition effect to slide in the overlay (h or w depending on reveal)*/
 }
@@ -48,11 +50,12 @@ font-family: 'Josefin Sans', 'Montserrat', sans-serif;
     display: block;
     transition: .3s;
 }
-.overlay a:hover, .overlay a:focus {
+.overlay a:hover,
+.overlay a:focus {
     color: #f1f1f1;
 }
 
-.overlay .closebtn {
+.overlay {
     position: absolute;
     top: 20px;
     right: 45px;
@@ -74,44 +77,73 @@ font-family: 'Josefin Sans', 'Montserrat', sans-serif;
 .homeBody {
     display: grid;
     width: 100%;
-    height: 90%;
+    height: 100%;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-gap: 1rem;
-    border: solid 1rem red;
     box-sizing: border-box;
+    padding: 1rem;
 }
 
-.homeBody > * {
+/* .homeBody > * {
     border: solid .5rem white;
-}
+} */
 
 .homeLogo {
-    grid-row: 1 / 4;
+    grid-row: 1 / 5;
     grid-column: 1 / 2;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+    margin: 1em;
+    padding: 1em;
+    font-size: 4vw;
+    font-weight: 100;
+    color: white;
+    border: solid .75rem white;
+    border-radius: .5rem;
 }
-
+.homeBody--link {
+    font-size: 9vw; /* this is made largerin hove menu below*/
+    font-style: italic;
+    color: white;
+    text-decoration: none;
+    padding: 5rem;
+    transition: .5s;
+}
+.homeBody--link:hover, .homeBody--link:focus {
+    text-decoration: underline;
+    font-size: 10vw;
+    color: black;
+    border-radius: 5%
+}
 #firstNav {
-    grid-row: 1 / 2;
+    grid-row: 1 / 3;
     grid-column: 2 / 4; 
     display: flex;
     justify-content: center;
     align-items: center;
 }
 #secondNav {
-    grid-row: 2 / 3;
+    grid-row: 3 / 5;
     grid-column: 2 / 4;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 #thirdNav {
-    grid-row: 3 / 4;
+    grid-row: 5 / 7;
     grid-column: 2 / 4;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+/* || grid properties for button div*/
+#navButton {
+grid-row: 5 / 7;
+grid-column: 1 / 2;
+display: flex;
+justify-content: flex-start;
+align-items: flex-end;
 }
