--- a/index.css
+++ b/index.css
@@ -5,54 +5,44 @@
     --gold: #c2911d;
 }
 body {
-    /* font-family: 'Amita', cursive; */
+    font-family: 'Amita', cursive;
     font-family: 'Josefin Sans', 'Montserrat', sans-serif;
     background-color: var(--pink);
-    display: flex;
-    flex-direction: column;
-    align-content: flex-start;
-    height: 100vh;
     color: white;
+    min-height: 100vh;
 }
 .cute-box {
     border: solid .5rem white;
     border-radius: .5rem;
 }
-/*|| button nav stuff*/
-.menuBtn {
-    font-size: 30px;
-    color: white;
-    cursor: pointer;
-    padding: .5rem;
-    border: solid .1em white;
-    text-decoration: none;
-    background-color: rgba(0,0,0,0);
-    transition: .5s;
-    margin: 1em;
-}
+/*|| nav stuff*/
 .overlay /*background*/{
-    height: 100%;
     width: 0;
+    height: max-content;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     left: 0;
     top: 0;
-    background-color: rgb(0,0,0); /*fallback*/
-    background-color: rgba(0,0,0,.9);
     overflow-x: hidden; /*disable hidden scroll*/
     transition: 0.5s; /*.5 second transition effect to slide in the overlay (h or w depending on reveal)*/
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .overlay--content {
-    position: relative;
+    /* position: relative;
     top: 25%;
     width: 100%;
     text-align: left;
-    margin-top: 30px; /* for small screens*/
+    margin-top: 30px; for small screens */
+
 }
 .overlay a {
     padding: 8px;
     text-decoration: none;
-    font-size: 36px;
+    font-size: 6vw;
     color: white;
     display: block;
     transition: .3s;
@@ -60,70 +50,129 @@ body {
 .overlay a:hover,
 .overlay a:focus {
     color: var(--pink);
+    font-size: 5vw;
 }
 
 .overlay {
     position: fixed;
-    top: 20px;
-    right: 45px;
+    top: 0;
+    right: 0;
     font-size: 60px;
+} 
+.svg--box {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 200px;
+    box-sizing: content-box;
+    background-color: rgba(0,0,0,.5);
+    transition: .5s;
+    border: solid .2em white;
+
+}
+.svg--box:hover{
+    width: 250px;
+}
+svg {
+    margin: 10px;
+    position: absolute;
+    height: 150px;
+}
+
+#navBox {
+    box-sizing: border-box;
+    width: 150px;
+    height: 100vh;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
+}
+
+.menuBtn {
+    cursor: pointer;
+    background: none;
+    border: none;
+    box-sizing: border-box;
+    transition: .5s;
+    position: absolute;
+    width: 250px;
+    height: 250px;
+
+    z-index: 1;
 }
 
 /* || main page */
 .homeBody {
-    display: grid;
-    width: 100%;
-    height: 100%;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-gap: 1rem;
     box-sizing: border-box;
-    padding: 1rem;
-    /* border: solid .5rem white; */
-    /* margin: 2rem; */
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-rows: 1fr 1fr 1fr ;
+    grid-gap: 3rem;
+    height: 100vh;
 }
-
-/* .homeBody > * {
-    border: solid .5rem white;
-} */
 
 .homeLogo {
-    grid-row: 1 / 4;
-    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
     align-items: center;
-    margin: 1em;
-    padding: 3em;
-    font-size: 2vw;
+    margin: 2rem;
     font-weight: 100;
-    /* border: solid .5rem white;
-    border-radius: .5rem; This is handled by cute-box class!*/
 }
+
+
+/* || link navs should be aligned left line of grid*/
 .homeBody--link {
-    font-size: 8vw; /* this is made larger in hover menu below*/
+    font-size: 7vw; /* this is made larger in hover menu below */
     font-style: italic;
     text-decoration: none;
     transition: .5s;
     color: white;
-    box-sizing: border-box;
-    padding: 15% 3rem;
+    padding: 1rem;
+    grid-column: 2 / 4;
     align-self: center;
+    justify-self: center;
 }
+.homeBody--link:nth-of-type(1) {
+    grid-row: 1 / 2;
+}
+.homeBody--link:nth-of-type(2)  {
+    grid-row: 2 / 3;
+}
+.homeBody--link:nth-of-type(3) {
+    grid-row: 3 / 4;
+}
+
 .homeBody--link:hover {
     text-decoration: underline;
-    font-size: 9vw;
+    font-size: 8vw;
     color: black;
 }
 .homeBody--link:focus {
     text-decoration: underline;
-    font-size: 9vw;
+    font-size: 8vw;
     color: var(--dark);
     background: rgba(0,0,0,.2);
-    justify-self: stretch;
 }
-/* || ALL buttons look at this*/
+/* || button div*/
+/* 
+.menuBtn {
+    color: white;
+    cursor: pointer;
+    background-color: rgba(0,0,0,0);
+    border-width: .1rem;
+    transition: .5s;
+}
+
 .menuBtn:hover,
 .menuBtn:focus {
     color: black;
@@ -135,35 +184,14 @@ body {
     justify-content: center;
     transition: .5s;
 }
-/* || link navs should be aligned left line of grid*/
-.homeBody--link:nth-of-type(1) {
-    grid-row: 1 / 3;
-    grid-column: 3 / 7; 
-    justify-self: stretch;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-}
-.homeBody--link:nth-of-type(2)  {
-    grid-row: 3 / 5;
-    grid-column: 3 / 7;
-    justify-self: stretch;
-}
-.homeBody--link:nth-of-type(3) {
-    grid-row: 5 / 7;
-    grid-column: 3 / 7;
-    justify-self: stretch;
-}
-/* || grid properties for button div*/
+
 .navButton--box {
-margin: 0;
-padding: 0;
-grid-row: 5 / 7;
-grid-column: 1 / 3;
-display: flex;
-align-items: center;
-justify-content: flex-start;
-}
+    grid-row: 3 /4;
+    grid-column: 1 / 2;
+    box-sizing: border-box;
+    align-self: flex-end;
+
+} */
 /* || Overlays || */
 
 /* || media 450px Height screens*/
@@ -187,15 +215,10 @@ justify-content: flex-start;
         flex-direction: row;
     }
     .menuBtn {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: fixed;
-        left: 0;
-        top: 95%;
-        width: 3.5em;
-        margin-top: -2.5em;
-        font-size: 5vw;
+        /* width: 100px;
+        height: 100px;
+        padding: 1rem; */
+        
     }
     
 }
